use java 8 features